@@ -607,11 +607,7 @@ fhandler_base::open (int flags, mode_t mode)
 	  access = GENERIC_WRITE | FILE_READ_ATTRIBUTES;
 	else
 	  access = GENERIC_READ | GENERIC_WRITE;
-	/* Allow reliable lseek on disk devices. */
-	if (get_major () == DEV_FLOPPY_MAJOR)
-	  access |= GENERIC_READ;
-	else if (get_major () != DEV_SERIAL_MAJOR
-		 && get_major () != DEV_TAPE_MAJOR)
+	if (get_major () != DEV_SERIAL_MAJOR && get_major () != DEV_TAPE_MAJOR)
 	  {
 	    create_options |= FILE_SYNCHRONOUS_IO_NONALERT;
 	    access |= SYNCHRONIZE;
